# mcu-elevator-qemu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  elevator_fsm_test  setup.sh  standalone.ld
.github/workflows/: build.yml
cmake/: toolchain-arm-none-eabi.cmake
src/: FreeRTOSConfig.h  main.c
src/app/: dispatcher_event.h  elevator_event.h  elevator_fsm.c  elevator_fsm.h
src/bsp/: bsp_uart.c  bsp_uart.h
src/os_tasks/: logger.c  logger.h  task_cli.c  task_cli.h  task_dispatcher.c  task_dispatcher.h  task_elevator.c  task_elevator.h
tests/: dispatcher_stress_test.c  elevator_fsm_test.c
